Fix dismissible tab click bug on iOS

--- a/src/components/tabs/_tabs.scss
+++ b/src/components/tabs/_tabs.scss
@@ -79,7 +79,6 @@
 // (padding/color rules are different for all tabs so they aren't in the generic class)
 .tab {
   @include css3(user-select, none);
-
   cursor: pointer;
   display: inline-block;
   position: relative;
@@ -93,6 +92,7 @@
     color: inherit;
     cursor: inherit;
     display: inline-block;
+    pointer-events: none;
     text-decoration: none;
 
     * {
@@ -102,6 +102,10 @@
     span {
       color: inherit;
     }
+  }
+
+  > .icon {
+    pointer-events: initial;
   }
 
   &.is-disabled {
@@ -484,6 +488,7 @@
             padding-right: 0;
             right: -1px;
             top: 1px;
+            z-index: 10;
           }
 
           &.icon-error {
